@@ -26,7 +26,7 @@ cat >formulas <<'EOF'
 1,5,X(((a & b) R (!a U !c)) R b)
 1,8,XXG(Fa U Xb)
 1,5,(!a M !b) W F!c
-1,3,(b & Fa & GFc) R a
+1,3,(b & GFc) R a
 1,2,(a R (b W a)) W G(!a M (b | c))
 1,11,(Fa W b) R (!a | Fc)
 1,6,X(G(!a M !b) | G(a | G!a))
