@@ -77,7 +77,7 @@ dac-patterns,37, 4,56, 4,56, 4,56, 4,56
 dac-patterns,38, 4,56, 4,56, 4,56, 4,56
 dac-patterns,39, 4,112, 4,112, 4,112, 4,112
 dac-patterns,40, 3,88, 3,88, 3,88, 3,88
-dac-patterns,41, 6,54, 6,54, 7,56, 7,56
+dac-patterns,41, 4,32, 4,32, 4,32, 4,32
 dac-patterns,42, 6,96, 6,96, 6,96, 6,96
 dac-patterns,43, 5,80, 5,80, 5,80, 5,80
 dac-patterns,44, 10,300, 10,300, 13,372, 13,372
