@@ -302,7 +302,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f3f0> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc090629840> >"
       ]
      },
      "metadata": {},
@@ -603,7 +603,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c31c360> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc090629db0> >"
       ]
      },
      "metadata": {},
@@ -812,7 +812,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c31c360> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc090629db0> >"
       ]
      },
      "metadata": {},
@@ -964,7 +964,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f840> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905b5960> >"
       ]
      },
      "metadata": {},
@@ -1062,7 +1062,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f690> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905b5840> >"
       ]
      },
      "metadata": {},
@@ -1272,7 +1272,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f7e0> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905c34e0> >"
       ]
      },
      "metadata": {},
@@ -1401,7 +1401,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f780> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905c3570> >"
       ]
      },
      "metadata": {},
@@ -1532,7 +1532,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c29f810> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905c3f90> >"
       ]
      },
      "metadata": {},
@@ -1792,7 +1792,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c23bb10> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905c3240> >"
       ]
      },
      "metadata": {},
@@ -2106,7 +2106,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7f691c23bb10> >"
+       "<spot.twa_graph; proxy of <Swig Object of type 'std::shared_ptr< spot::twa_graph > *' at 0x7fc0905c3240> >"
       ]
      },
      "metadata": {},
@@ -2192,7 +2192,7 @@
       "G!p0 | (!p0 U (p0 & (F(p1 & XFp2) -> (!p      4        2          1\n",
       "G((p0 & Fp1) -> (!(!p1 & p2 & X(!p1 U (!      4        1          1\n",
       "G(p0 -> ((!(!p1 & p2 & X(!p1 U (!p1 & p3      3        0          1\n",
-      "G((p0 & XFp1) -> XF(p1 & Fp2))                6        1          1\n",
+      "G((p0 & XFp1) -> XF(p1 & Fp2))                4        0          1\n",
       "Fp0 -> (((p1 & X(!p0 U p2)) -> X(!p0 U (      6        2          1\n",
       "G(p0 -> G((p1 & XFp2) -> X(!p2 U (p2 & F      5        0          1\n",
       "G((p0 & Fp1) -> (((p2 & X(!p1 U p3)) ->      10        2          1\n",
@@ -2318,7 +2318,7 @@
     {
      "data": {
       "text/plain": [
-       "55.749128919860624"
+       "55.78947368421053"
       ]
      },
      "execution_count": 31,
